css/landingPage.css
html {
    min-height: 100%;
}

body {
  background-color: #F1F1F1;
  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#EFEFEF), to(#e2e2e2));
  background: -moz-gradient(linear, 0% 0%, 0% 100%, from(#EFEFEF), to(#e2e2e2));
  background: -o-gradient(linear, 0% 0%, 0% 100%, from(#EFEFEF), to(#e2e2e2));
}

#project_header {
  max-width: 1170px;
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 20px;
  margin-top: 15px;
}

#project_header hr {
  border-top: 2px solid #D8D8D8;
  border-bottom: 1px solid #FAFAFA;

}

#project_name h1{
  font-family: 'Ubuntu', sans-serif;
  color: #F16B23;
  font-size: 52px;
  font-weight: normal;
  display:block;
}

.ubiqua {
  font-family: 'Ubuntu', sans-serif;
  color: #FFF;
  font-size: 36px;
  font-weight: normal;
}

#project_name img {
  width: 450px;
  margin-left: auto;
  margin-right: auto;
  display:block;
}

#project_title {
  color: #fff;
}
.contenedor{
  padding-right:10%;
  padding-left:10%;

}
.linkBar {
  float: right;
  margin-right: 25px;
  position: relative;
  padding: 2px 6px;
  margin-top: 16px;
  padding-right: 0px;
}

.linkBar::before, .linkBar::after {
  content: "";
  position: absolute;
  width: 1px;
  top: -1px;
  bottom: -2px;
  background-repeat: no-repeat;
  background-size: 1px 100%;
}

.linkBar::before {
  right: 1px;
  background-image: -webkit-linear-gradient(rgba(181, 188, 202, 0), rgba(181, 188, 202, 0.75) 30%, rgba(181, 188, 202, 0.75) 70%, rgba(181, 188, 202, 0));
  background-image: -moz-linear-gradient(rgba(181, 188, 202, 0), rgba(181, 188, 202, 0.75) 30%, rgba(181, 188, 202, 0.75) 70%, rgba(181, 188, 202, 0));
  background-image: -o-linear-gradient(rgba(181, 188, 202, 0), rgba(181, 188, 202, 0.75) 30%, rgba(181, 188, 202, 0.75) 70%, rgba(181, 188, 202, 0));
  background-image: -ms-linear-gradient(rgba(181, 188, 202, 0), rgba(181, 188, 202, 0.75) 30%, rgba(181, 188, 202, 0.75) 70%, rgba(181, 188, 202, 0));
  background-image: linear-gradient(rgba(181, 188, 202, 0), rgba(181, 188, 202, 0.75) 30%, rgba(181, 188, 202, 0.75) 70%, rgba(181, 188, 202, 0));
}

.linkBar::after {
  right: 0;
  background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.6) 50%, rgba(255, 255, 255, 0));
  background-image: -moz-linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.6) 50%, rgba(255, 255, 255, 0));
  background-image: -o-linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.6) 50%, rgba(255, 255, 255, 0));
  background-image: -ms-linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.6) 50%, rgba(255, 255, 255, 0));
  background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.6) 50%, rgba(255, 255, 255, 0));
}

.linkBar li {
  display: block;
  float: left;
  padding: 0 25px;
  padding-left: 0;
}

.barLink{
  display: inline-block;
  margin-top: 10px;
  color: #666;
  font-size: 16px;
  font-weight: bold;
  text-shadow: 0 1px 0 white;
  margin-bottom: 4px;
}

.barLink:hover {
  text-decoration: none;
  color: #333;
  cursor: pointer;
}

#wrapper {
  background-color: #fff;
  border: 2px #fff solid;
  border-radius: 10px;
  padding: 10px;
  -moz-box-shadow:    0 1px 3px #BBB;
  -webkit-box-shadow: 0 1px 3px #BBB;
  box-shadow:         0 1px 3px #BBB;
}

/*******************
    Landing Page
*******************/
.L {
  width: 100%;
  height: 380px;
  border-radius: 10px;
  -moz-box-shadow: 0 1px 3px #BBB;
  -webkit-box-shadow: 0 1px 3px #BBB;
  box-shadow: 0 1px 3px #888;
}

.secondL {
  width: 100%;
  height: 340px;
  border-radius: 10px;
  -moz-box-shadow: 0 1px 3px #BBB;
  -webkit-box-shadow: 0 1px 3px #BBB;
  box-shadow: 0 1px 3px #888;
  margin-top: 30px;
  margin-bottom: 30px;
}

.L1, .L2, .L3, .L4 {
  width: 50%;
  margin: 0;
  display: inline-block;
  height:380px;
  max-height: 380px;
  float: left;
}

.L1 {
  background-color: white;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}

.L2 {
  color:white;
  font-size:14px;
  font-family:'helvetica', sans-serif;
  background-color: blue;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  background-color: #154788;
  background-image: -moz-linear-gradient(top, #1f60af, #14447f);
  background-image: -ms-linear-gradient(top, #1f60af, #14447f);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1f60af), to(#14447f));
  background-image: -webkit-linear-gradient(top, #1f60af, #14447f);
  background-image: -o-linear-gradient(top, #1f60af, #14447f);
  background-image: linear-gradient(top, #1f60af, #14447f);
  background-repeat: repeat-x;
}
.L3{
    width: 50%;
  margin: 0;
  display: inline-block;
  height:340px;
  max-height: 340px;
  float: left;
  font-size:14px;
  font-family:'helvetica', sans-serif;
  background-color: blue;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  background-color: white;
}
.L4{
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  height:340px;
  max-height: 340px;
}
.explanation{
  margin-top: 2%;
  margin-right: 2%;
  margin-left: 2%;
  font-family:'Source Sans Pro', sans-serif;
  text-shadow: 0 1px 0 white;
  color: #666;
  font-size: 15px;
  text-align: center;
}
.bullet{
  text-align: center;
  margin-top: 1.5%;
  font-family:'Source Sans Pro', sans-serif;
  text-shadow: 0 1px 0 white;
  color: #666;
  font-size: 15px;
  margin-left: 0px !important;
}
.bulletIcon{
  font-size: 125px;
}
.moreInfo{
  padding-left: 2%;
  padding-right: 2%;
  font-size: 12.5px;
}
.inputEmail{
  width:35%;
  height: 25px;

}
.rec {
  -webkit-box-shadow: inset 0px 1px 2px #1D1E44;
  -moz-box-shadow: inset 0px 1px 2px #1D1E44;
  -o-box-shadow: inset 0px 1px 2px #1D1E44;
  -ms-box-shadow: inset 0px 1px 2px #1D1E44;
  box-shadow: inset 0px 1px 2px #1D1E44;
  border-radius: 10px;
  margin-top: 30px;
  margin-bottom: 30px;
  padding: 20px;
  background-color: #14447f;
  border-bottom: 1px solid #1f60af;
  color: white;
  font-size: 16px;
  text-align: center;
}

.thanks {
  display: none;
  -webkit-box-shadow: inset 0px 1px 2px #1D1E44;
  -moz-box-shadow: inset 0px 1px 2px #1D1E44;
  -o-box-shadow: inset 0px 1px 2px #1D1E44;
  -ms-box-shadow: inset 0px 1px 2px #1D1E44;
  box-shadow: inset 0px 1px 2px #1D1E44;
  border-radius: 10px;
  margin: 30px;
  padding: 20px;
  background-color: #14447f;
  border-bottom: 1px solid #1f60af;
  color:white;
  text-align: center;
  font-size: 
}

.rec form {
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
}
.rec span{
  text-align: center !important;
  margin-left: auto;
  margin-right: auto;
}
.logo{
  height:60px;x
  width: 60px;
}

#landingImage {
  width: 100%;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  height: 380px;
}
#landingImage2{
   width: 100%;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  height:340px;
  max-height: 340px;
}
.actualBenefits{
  font-size:17px;
  margin-top: 56px;
  list-style-image: url(/img/checkmark.png);
}
.actualBenefits2{
  font-size:17px;
  margin-top: 25px;
}

.mainMessage{
  font-size:36px;
  margin:5px;
  margin-top:12px;
  margin-bottom: 12px;
  font-weight:bold;
  line-height:35px;
  font-family:'Source Sans Pro', sans-serif;
  text-align: center;
  text-shadow: 0 1px 0 white;
  color: #666;
}

.spacingBullets{
  line-height:45px;
  margin-left: 15%;
  margin-right: 10%;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}
.tittleServ{
  font-size: 20px;
  padding-top: 15px;
  padding-left: 25px;
}
.linkHOW {
  text-align: right;
  color: white;
  text-decoration: underline;
  font-size: 14px;
  display: block;
  margin-right: 28%;
  margin-top: 5px;
}
.colorLearn{
  color: white;
}

.linkHOW:hover {
  color:#C9C9C9;
}

#companyName{
  color: #F16B23;
  /*text-shadow: -1px 0 #154788, 0 1px #154788, 1px 0 #154788, 0 -1px #154788; */
  font-size:50px;
  margin:0px 20px 10px !important;
  margin-bottom: 40px;
  font-family:'Ubuntu', sans-serif;
  padding-top: 15px;
}

#companySlogan{
  color:#E85713;
  font-size:20px;
  margin:15px;
}

.buttonRegister{
  max-width: 80%;
  height:12%;
  font-size: 24px;
  vertical-align: center;
  margin-left: 26%;
  margin-right: 15%;
  margin-bottom: 0;
  margin-top:5%;
  padding-top: 4%;
  padding-bottom: 0;
  padding-left: 4%;
  padding-right: 4%;
  line-height: 25px !important;
  box-shadow: 0 1px 3px #090C42;
}

@media (max-width: 1200px) {
  .buttonRegister{
    font-size: 18px;
  }
  .spacingBullets{
    line-height: 30px;
  }
  .linkHOW{
    margin-right: 29%;
  }
}

@media (max-width: 979px) {
  .buttonRegister{
    margin-left: 22%;
    line-height: 35px;
  }
  .linkHOW{
    margin-right: 21%;
  }
}

@media (max-width: 700px) {
  .buttonRegister{
    font-size: 14px;
  }
  .actualBenefits{
    font-size: 16px;
  }
  .linkHOW{
    font-size: 12px;
    margin-right: 21%;
  }
}

.detailsLanding{
  font-size:26px;
  text-align: center;
  margin-top:0.3%;
  margin-left: 2%;
  text-decoration:bold;
  width:96%;
  height: 50px;
  padding-top:20px;
  color:#666;
  font-family:'helvetica', sans-serif;
  text-shadow: 0 1px 0 white;
  /*border:2px solid #154788;*/
  line-height: 28px;
}


.formatFooter {
  text-align: center !important;
  margin-left: 4% !important;
  margin-right: -0.5% !important;
  margin-top: 2%;
  margin-bottom: 0.5%;
  font-color:#6E6868;
  text-shadow: 0 1px 0 white;
  transition: color 150ms ease;
  -webkit-transition: color 150ms ease;
  -moz-transition: color 150ms ease;
  -o-transition: color 150ms ease;
}

.hyperlinkFooter:link {
  color:#6E6868;
}

.hyperlinkFooter:hover {
  color:#333 !important;
  text-decoration: none;
}

.hyperlinkFooter:visited {
  color:#6E6868;
}

.hyperlinkFooter:active {
  color:#6E6868;
}
/********************
Noise
********************/

.noise::before {
  background-image: url(/img/noise.png);
  bottom: 0;
  content: "";
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: -1;
}

